--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,6 +5,7 @@ theme: PaperMod
 
 params:
   env: production
+  math: true
   description: "Data-driven insights on productivity, flow states, and human performance"
   author: Manuel Del Verme
   ShowReadingTime: true
