Port to Hugo, replace Jekyll site
- Update baseURL to root domain
- Merge research + quantified self about page
- Add constrained neural networks post
- Add skip rate signal post

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://blog.silverstream.ai/
+baseURL: https://manuel-delverme.github.io/
 languageCode: en-us
 title: Quantified Mind
 theme: PaperMod
